@@ -20,11 +20,7 @@ package com.publicissapient.kpidashboard.apis.sonar.service;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
-import com.publicissapient.kpidashboard.apis.constant.Constant;
-import com.publicissapient.kpidashboard.apis.errors.EntityNotFoundException;
-import com.publicissapient.kpidashboard.apis.kpiintegration.service.KpiIntegrationServiceImpl;
 import org.apache.commons.lang.SerializationUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -38,9 +34,11 @@ import com.publicissapient.kpidashboard.apis.enums.KPICode;
 import com.publicissapient.kpidashboard.apis.enums.KPISource;
 import com.publicissapient.kpidashboard.apis.errors.ApplicationException;
 import com.publicissapient.kpidashboard.apis.filter.service.FilterHelperService;
+import com.publicissapient.kpidashboard.apis.kpiintegration.service.KpiIntegrationServiceImpl;
 import com.publicissapient.kpidashboard.apis.model.AccountHierarchyData;
 import com.publicissapient.kpidashboard.apis.model.KpiElement;
 import com.publicissapient.kpidashboard.apis.model.KpiRequest;
+import com.publicissapient.kpidashboard.apis.model.Node;
 import com.publicissapient.kpidashboard.apis.model.TreeAggregatorDetail;
 import com.publicissapient.kpidashboard.apis.sonar.factory.SonarKPIServiceFactory;
 import com.publicissapient.kpidashboard.apis.util.KPIHelperUtil;
@@ -78,15 +76,15 @@ public class SonarServiceR {
 	 * Process Sonar KPI request for Kanban projects
 	 * 
 	 * @param kpiRequest
+	 *            kpiRequest
 	 * @return {@code List<KpiElement>}
 	 */
-	@SuppressWarnings({ "unchecked", "PMD.AvoidCatchingGenericException" })
+	@SuppressWarnings({ "PMD.AvoidCatchingGenericException" })
 	public List<KpiElement> process(KpiRequest kpiRequest) {
 
 		log.info("[SONAR][{}]. Processing KPI calculation for data {}", kpiRequest.getRequestTrackerId(),
 				kpiRequest.getKpiList());
-		List<KpiElement> origRequestedKpis = kpiRequest.getKpiList().stream().map(KpiElement::new)
-				.collect(Collectors.toList());
+		List<KpiElement> origRequestedKpis = kpiRequest.getKpiList().stream().map(KpiElement::new).toList();
 		List<KpiElement> responseList = new ArrayList<>();
 		String[] projectKeyCache = null;
 		try {
@@ -136,29 +134,52 @@ public class SonarServiceR {
 	 * Calculates all KPI aggregated metrics
 	 * 
 	 * @param kpiRequest
-	 * @param responseList
+	 *            kpiRequest
 	 * @param kpiElement
+	 *            kpiElement
 	 * @param treeAggregatorDetail
-	 * @throws Exception
+	 *            treeAggregatorDetail
+	 * @return kpielement
 	 */
-	private void calculateAllKPIAggregatedMetrics(KpiRequest kpiRequest, List<KpiElement> responseList,
-			KpiElement kpiElement, TreeAggregatorDetail treeAggregatorDetail) throws ApplicationException {
+	private KpiElement calculateAllKPIAggregatedMetrics(KpiRequest kpiRequest, KpiElement kpiElement,
+			TreeAggregatorDetail treeAggregatorDetail) {
 		long startTime;
 
-		KPICode kpi = KPICode.getKPI(kpiElement.getKpiId());
+		try {
+			KPICode kpi = KPICode.getKPI(kpiElement.getKpiId());
 
-		SonarKPIService<?, ?, ?> sonarKPIService = null;
-		sonarKPIService = SonarKPIServiceFactory.getSonarKPIService(kpi.name());
+			SonarKPIService<?, ?, ?> sonarKPIService = null;
+			sonarKPIService = SonarKPIServiceFactory.getSonarKPIService(kpi.name());
 
-		startTime = System.currentTimeMillis();
+			startTime = System.currentTimeMillis();
 
-		TreeAggregatorDetail treeAggregatorDetailClone = (TreeAggregatorDetail) SerializationUtils
-				.clone(treeAggregatorDetail);
-		responseList.add(sonarKPIService.getKpiData(kpiRequest, kpiElement, treeAggregatorDetailClone));
-		if (log.isInfoEnabled()) {
-			log.info("[SONAR-{}-TIME][{}]. KPI took {} ms", kpi.name(), kpiRequest.getRequestTrackerId(),
-					System.currentTimeMillis() - startTime);
+			TreeAggregatorDetail treeAggregatorDetailClone = (TreeAggregatorDetail) SerializationUtils
+					.clone(treeAggregatorDetail);
+			List<Node> projectNodes = treeAggregatorDetailClone.getMapOfListOfProjectNodes()
+					.get(CommonConstant.PROJECT.toLowerCase());
+
+			if (!projectNodes.isEmpty() && (projectNodes.size() > 1
+					|| kpiHelperService.isMandatoryFieldValuePresentOrNot(kpi, projectNodes.get(0)))) {
+				kpiElement = sonarKPIService.getKpiData(kpiRequest, kpiElement, treeAggregatorDetailClone);
+				kpiElement.setResponseCode(CommonConstant.KPI_PASSED);
+			} else if (!kpiHelperService.isMandatoryFieldValuePresentOrNot(kpi, projectNodes.get(0))) {
+				// mandatory fields not found
+				kpiElement.setResponseCode(CommonConstant.MANDATORY_FIELD_MAPPING);
+			}
+			if (log.isInfoEnabled()) {
+				log.info("[SONAR-{}-TIME][{}]. KPI took {} ms", kpi.name(), kpiRequest.getRequestTrackerId(),
+						System.currentTimeMillis() - startTime);
+			}
+		} catch (ApplicationException exception) {
+			kpiElement.setResponseCode(CommonConstant.KPI_FAILED);
+			log.error("[SONAR][{}]. Error while KPI calculation for data. No data found {} {}",
+					kpiRequest.getRequestTrackerId(), kpiRequest.getKpiList(), exception.getStackTrace());
+		} catch (Exception exception) {
+			kpiElement.setResponseCode(CommonConstant.KPI_FAILED);
+			log.error("[PARALLEL_JIRA_SERVICE].Exception occurred", exception);
+			return kpiElement;
 		}
+		return kpiElement;
 
 	}
 
@@ -166,9 +187,13 @@ public class SonarServiceR {
 	 * Sets KPI reponse List into KnowHow Cache
 	 * 
 	 * @param kpiRequest
+	 *            kpiRequest
 	 * @param responseList
+	 *            responseList
 	 * @param groupId
+	 *            groupId
 	 * @param projectKeyCache
+	 *            projectKeyCache
 	 */
 	private void setIntoKnowHowCache(KpiRequest kpiRequest, List<KpiElement> responseList, Integer groupId,
 			String[] projectKeyCache) {
@@ -181,36 +206,32 @@ public class SonarServiceR {
 		}
 	}
 
-	private Object getDataFromCache(Object cachedData, KpiRequest kpiRequest) {
+	private void getDataFromCache(Object cachedData, KpiRequest kpiRequest) {
 		if (!kpiRequest.getRequestTrackerId().toLowerCase().contains(KPISource.EXCEL.name().toLowerCase())
 				&& null != cachedData)
 			log.info("[JIRA][{}]. Fetching value from cache for {}", kpiRequest.getRequestTrackerId(),
 					kpiRequest.getIds());
-		return cachedData;
 	}
 
 	private void calculateKPIAggregatedMetrics(KpiRequest kpiRequest, List<KpiElement> responseList,
 			TreeAggregatorDetail treeAggregatorDetail) {
 		for (KpiElement kpiEle : kpiRequest.getKpiList()) {
-			try {
-				calculateAllKPIAggregatedMetrics(kpiRequest, responseList, kpiEle, treeAggregatorDetail);
-			} catch (ApplicationException e) {
-				log.error("[SONAR][{}]. Error while KPI calculation for data. No data found {} {}",
-						kpiRequest.getRequestTrackerId(), kpiRequest.getKpiList(), e.getStackTrace());
-			}
+			responseList.add(calculateAllKPIAggregatedMetrics(kpiRequest, kpiEle, treeAggregatorDetail));
 		}
 	}
 
 	private List<KpiElement> filterKips(List<KpiElement> origRequestedKpis, List<KpiElement> responseList) {
-		return origRequestedKpis.stream()
-				.filter(reqKpi -> responseList.stream()
-						.noneMatch(responseKpi -> reqKpi.getKpiId().equals(responseKpi.getKpiId())))
-				.collect(Collectors.toList());
+		return origRequestedKpis.stream().filter(reqKpi -> responseList.stream()
+				.noneMatch(responseKpi -> reqKpi.getKpiId().equals(responseKpi.getKpiId()))).toList();
 	}
 
 	/**
+	 * 
 	 * @param kpiRequest
+	 *            kpiRequest
 	 * @param filteredAccountDataList
+	 *            filteredAccountDataList
+	 * @return array of string
 	 */
 	private String[] getProjectKeyCache(KpiRequest kpiRequest, List<AccountHierarchyData> filteredAccountDataList) {
 		String[] projectKeyCache;
@@ -224,8 +245,10 @@ public class SonarServiceR {
 
 	/**
 	 * @param kpiRequest
+	 *            kpiRequest
 	 * @param filteredAccountDataList
-	 * @return
+	 *            filteredAccountDataList
+	 * @return list of hierrachy
 	 */
 	private List<AccountHierarchyData> getAuthorizedFilteredList(KpiRequest kpiRequest,
 			List<AccountHierarchyData> filteredAccountDataList) {
@@ -237,14 +260,13 @@ public class SonarServiceR {
 	}
 
 	/**
+	 * 
 	 * This method is called when the request for kpi is done from exposed API
-	 *
+	 * 
 	 * @param kpiRequest
 	 *            SONAR KPI request true if flow for precalculated, false for direct
-	 *            flow.
+	 *            * flow.
 	 * @return List of KPI data
-	 * @throws EntityNotFoundException
-	 *             EntityNotFoundException
 	 */
 	public List<KpiElement> processWithExposedApiToken(KpiRequest kpiRequest) {
 		referFromProjectCache = false;
