@@ -18,13 +18,12 @@
 
 package com.publicissapient.kpidashboard.apis.zephyr.service;
 
+import java.io.Serial;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.ForkJoinTask;
 import java.util.concurrent.RecursiveAction;
-import java.util.stream.Collectors;
 
-import com.publicissapient.kpidashboard.apis.kpiintegration.service.KpiIntegrationServiceImpl;
 import org.apache.commons.lang.SerializationUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.converter.HttpMessageNotWritableException;
@@ -40,9 +39,11 @@ import com.publicissapient.kpidashboard.apis.enums.KPISource;
 import com.publicissapient.kpidashboard.apis.errors.ApplicationException;
 import com.publicissapient.kpidashboard.apis.errors.EntityNotFoundException;
 import com.publicissapient.kpidashboard.apis.filter.service.FilterHelperService;
+import com.publicissapient.kpidashboard.apis.kpiintegration.service.KpiIntegrationServiceImpl;
 import com.publicissapient.kpidashboard.apis.model.AccountHierarchyData;
 import com.publicissapient.kpidashboard.apis.model.KpiElement;
 import com.publicissapient.kpidashboard.apis.model.KpiRequest;
+import com.publicissapient.kpidashboard.apis.model.Node;
 import com.publicissapient.kpidashboard.apis.model.TreeAggregatorDetail;
 import com.publicissapient.kpidashboard.apis.util.KPIHelperUtil;
 import com.publicissapient.kpidashboard.apis.zephyr.factory.ZephyrKPIServiceFactory;
@@ -82,15 +83,16 @@ public class ZephyrService {
 	 * Process the zephyr based KPI requests.
 	 * 
 	 * @param kpiRequest
-	 * @return
+	 *            kpiRequest
+	 * @return list of kpielement
 	 * @throws EntityNotFoundException
+	 *             EntityNotFoundException
 	 */
 	@SuppressWarnings({ "unchecked" })
 	public List<KpiElement> process(KpiRequest kpiRequest) throws EntityNotFoundException {
 
 		log.info("[ZEPHYR][{}]. Processing KPI calculation for data {}", kpiRequest.getIds(), kpiRequest.getKpiList());
-		List<KpiElement> origRequestedKpis = kpiRequest.getKpiList().stream().map(KpiElement::new)
-				.collect(Collectors.toList());
+		List<KpiElement> origRequestedKpis = kpiRequest.getKpiList().stream().map(KpiElement::new).toList();
 		List<KpiElement> responseList = new ArrayList<>();
 		String[] projectKeyCache = null;
 		try {
@@ -134,10 +136,8 @@ public class ZephyrService {
 				}
 
 				ForkJoinTask.invokeAll(listOfTask);
-				List<KpiElement> missingKpis = origRequestedKpis.stream()
-						.filter(reqKpi -> responseList.stream()
-								.noneMatch(responseKpi -> reqKpi.getKpiId().equals(responseKpi.getKpiId())))
-						.collect(Collectors.toList());
+				List<KpiElement> missingKpis = origRequestedKpis.stream().filter(reqKpi -> responseList.stream()
+						.noneMatch(responseKpi -> reqKpi.getKpiId().equals(responseKpi.getKpiId()))).toList();
 				responseList.addAll(missingKpis);
 				setIntoApplicationCache(kpiRequest, responseList, groupId, projectKeyCache);
 			} else {
@@ -154,8 +154,10 @@ public class ZephyrService {
 
 	/**
 	 * @param kpiRequest
+	 *            kpiRequest
 	 * @param filteredAccountDataList
-	 * @return
+	 *            filteredAccountDataList
+	 * @return list of hierarchy
 	 */
 	private List<AccountHierarchyData> getAuthorizedFilteredList(KpiRequest kpiRequest,
 			List<AccountHierarchyData> filteredAccountDataList) {
@@ -182,9 +184,13 @@ public class ZephyrService {
 	 * Sets cache.
 	 *
 	 * @param kpiRequest
+	 *            kpiRequest
 	 * @param responseList
+	 *            responseList
 	 * @param groupId
+	 *            groupId
 	 * @param projectKeyCache
+	 *            projectKeyCache
 	 */
 	private void setIntoApplicationCache(KpiRequest kpiRequest, List<KpiElement> responseList, Integer groupId,
 			String[] projectKeyCache) {
@@ -206,6 +212,7 @@ public class ZephyrService {
 	 */
 	public class ParallelZephyrServices extends RecursiveAction {
 
+		@Serial
 		private static final long serialVersionUID = 1L;
 		private final KpiRequest kpiRequest;
 		private final transient List<KpiElement> responseList;
@@ -235,44 +242,54 @@ public class ZephyrService {
 		 */
 		@Override
 		public void compute() {
-			try {
-				calculateAllKPIAggregatedMetrics(kpiRequest, responseList, kpiEle, treeAggregatorDetail);
-			} catch (Exception e) {
-				log.error("[PARALLEL_ZEPHYR_SERVICE].Exception occured {}", e);
-			}
+			responseList.add(calculateAllKPIAggregatedMetrics(kpiRequest, kpiEle, treeAggregatorDetail));
 		}
 
 		/**
 		 * This method call by multiple thread, take object of specific KPI and call
 		 * method of these KPIs
-		 *
+		 * 
 		 * @param kpiRequest
-		 *            Zephyr KPI request
-		 * @param responseList
-		 *            List of KpiElement having data of each KPIs
+		 *            kpiRequest
 		 * @param kpiElement
+		 *            kpiElement
 		 * @param treeAggregatorDetail
-		 *            filter tree object
-		 * @throws ApplicationException
-		 * @throws EntityNotFoundException
+		 *            treeAggregatorDetail
+		 * @return KpiElement kpielement
 		 */
-		private void calculateAllKPIAggregatedMetrics(KpiRequest kpiRequest, List<KpiElement> responseList,
-				KpiElement kpiElement, TreeAggregatorDetail treeAggregatorDetail) throws ApplicationException {
+		private KpiElement calculateAllKPIAggregatedMetrics(KpiRequest kpiRequest, KpiElement kpiElement,
+				TreeAggregatorDetail treeAggregatorDetail) {
 
-			ZephyrKPIService<?, ?, ?> zephyrKPIService = null;
+			try {
+				KPICode kpi = KPICode.getKPI(kpiElement.getKpiId());
+				ZephyrKPIService<?, ?, ?> zephyrKPIService = ZephyrKPIServiceFactory.getZephyrKPIService(kpi.name());
+				long startTime = System.currentTimeMillis();
+				TreeAggregatorDetail treeAggregatorDetailClone = (TreeAggregatorDetail) SerializationUtils
+						.clone(treeAggregatorDetail);
+				List<Node> projectNodes = treeAggregatorDetailClone.getMapOfListOfProjectNodes()
+						.get(CommonConstant.PROJECT.toLowerCase());
 
-			KPICode kpi = KPICode.getKPI(kpiElement.getKpiId());
+				if (!projectNodes.isEmpty() && (projectNodes.size() > 1
+						|| kpiHelperService.isMandatoryFieldValuePresentOrNot(kpi, projectNodes.get(0)))) {
+					kpiElement = zephyrKPIService.getKpiData(kpiRequest, kpiElement, treeAggregatorDetailClone);
+					kpiElement.setResponseCode(CommonConstant.KPI_PASSED);
+				} else if (!kpiHelperService.isMandatoryFieldValuePresentOrNot(kpi, projectNodes.get(0))) {
+					// mandatory fields not found
+					kpiElement.setResponseCode(CommonConstant.MANDATORY_FIELD_MAPPING);
+				}
 
-			zephyrKPIService = ZephyrKPIServiceFactory.getZephyrKPIService(kpi.name());
-
-			long startTime = System.currentTimeMillis();
-
-			TreeAggregatorDetail treeAggregatorDetailClone = (TreeAggregatorDetail) SerializationUtils
-					.clone(treeAggregatorDetail);
-			responseList.add(zephyrKPIService.getKpiData(kpiRequest, kpiElement, treeAggregatorDetailClone));
-
-			long processTime = System.currentTimeMillis() - startTime;
-			log.info("[ZEPHYR-{}-TIME][{}]. KPI took {} ms", kpi.name(), kpiRequest.getRequestTrackerId(), processTime);
+				long processTime = System.currentTimeMillis() - startTime;
+				log.info("[ZEPHYR-{}-TIME][{}]. KPI took {} ms", kpi.name(), kpiRequest.getRequestTrackerId(),
+						processTime);
+			} catch (ApplicationException exception) {
+				kpiElement.setResponseCode(CommonConstant.KPI_FAILED);
+				log.error("Kpi not found", exception);
+			} catch (Exception exception) {
+				kpiElement.setResponseCode(CommonConstant.KPI_FAILED);
+				log.error("[PARALLEL_ZEPHYR_SERVICE].Exception occured", exception);
+				return kpiElement;
+			}
+			return kpiElement;
 		}
 	}
 
@@ -280,8 +297,8 @@ public class ZephyrService {
 	 * This method is called when the request for kpi is done from exposed API
 	 *
 	 * @param kpiRequest
-	 *            Zephyr KPI request true if flow for precalculated, false for direct
-	 *            flow.
+	 *            Zephyr KPI request true if flow for precalculated, false for
+	 *            direct flow.
 	 * @return List of KPI data
 	 * @throws EntityNotFoundException
 	 *             EntityNotFoundException
